added modal window

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8d73d6a795.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 
@@ -74,7 +75,7 @@
     </section>
 
     <!-- WORKS -->
-    <section class="works">
+    <div class="works">
         <div class="container">
             <div class="works__nav">
                 <a href="" class="works__nav-link">All</a>
@@ -199,7 +200,198 @@
             </div>
 
         </div> <!-- /.containter -->
+    </div>
+
+    <!-- ABOUT -->
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                <div class="about__photo">
+                    <img class="img" src="images/Designer_cv4.png" alt="photo">
+                </div>
+                <div class="about__content">
+                    <h3 class="about__title">About me</h3>
+                    <h2 class="about__bigtitle">Who am i</h2>
+                    <div class="about__text">
+                        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam autem hic fugit culpa, assumenda ea excepturi voluptas ullam error, nihil, reiciendis nemo ipsa aliquam rem, atque quisquam commodi quia repudiandae.</span></p>
+                        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam autem hic fugit culpa, assumenda ea excepturi voluptas ullam error, nihil, reiciendis nemo ipsa aliquam rem, atque quisquam commodi quia repudiandae.</span></p>
+                        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam autem hic fugit culpa, assumenda ea excepturi voluptas ullam error, nihil, reiciendis nemo ipsa aliquam rem, atque quisquam commodi quia repudiandae.</span></p>
+                    </div>
+                    <a href="#" class="btn">hire me</a>
+                    <button type="button" class="btn">see my resume</button>
+                </div> <!-- /.about__content -->
+            </div> <!-- /.about__inner -->
+        </div> <!-- /.container -->
     </section>
+
+    <!-- REVIEWS -->
+    <div class="reviews">
+        <div class="container">
+            <div class="reviews__item">
+                <div class="reviews__text">
+                    <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum perferendis ab quae esse, nam facilis modi ratione nesciunt, quasi. Corporis deserunt necessitatibus reiciendis ducimus laboriosam eius, at, libero perferendis similique.</span></p>
+                    <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum perferendis ab quae esse, nam facilis modi ratione nesciunt, quasi. Corporis deserunt necessitatibus reiciendis ducimus laboriosam eius, at, libero perferendis similique.</span></p>
+                </div>
+                <div class="reviews__author">
+                    <img class="reviews__photo" src="https://via.placeholder.com/103/333" alt="avatar">
+                    <div class="reviews__name">Edward M. Brooks</div>
+                    <div class="reviews__company">Marketing House</div>
+                    <div class="reviews__rating">
+                        <i class="fas fa-star reviews__star"></i>
+                        <i class="fas fa-star reviews__star"></i>
+                        <i class="fas fa-star reviews__star"></i>
+                        <i class="fas fa-star reviews__star"></i>
+                        <i class="fas fa-star-half-alt reviews__star"></i>
+                    </div>
+                </div>
+            </div> <!-- reviews__item -->
+        </div> <!-- /.contaner -->
+    </div> <!-- /.reviews -->
+
+    <!-- NEWS -->
+    <section class="news">
+        <div class="container">
+            <div class="news__header">
+                <h3 class="news__title">read me</h3>
+                <div class="news__text">Sometimes I write something smart</div>
+            </div> <!-- /.news__header -->
+
+            <div class="articles">
+                <div class="articles__col">
+                    <div class="articles__item">
+                        <div class="articles__header">
+                            <time class="articles__date">10 <br>June</time>
+                            <a href="#">
+                                <img src="https://via.placeholder.com/370x257" alt="photo" class="articles__photo">
+                            </a>
+                        </div>
+                        <div class="articles__content">
+                            <h4 class="articles__title">
+                                <a href="">Ten the best app in 2020</a>
+                            </h4>
+                            <div class="articles__cat">category</div>
+                            <div class="articles__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptas, nostrum incidunt animi, harum, adipisci soluta impedit facere distinctio nihil minus, ipsa excepturi possimus. Ut dignissimos eos numquam fugiat cupiditate!</p>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn--sm">Read more</a>
+                    </div> <!-- /.articles__item -->
+                </div> <!-- /.articles__col -->
+                <div class="articles__col">
+                    <div class="articles__item">
+                        <div class="articles__header">
+                            <time class="articles__date">10 <br>June</time>
+                            <a href="#">
+                                <img src="https://via.placeholder.com/370x257" alt="photo" class="articles__photo">
+                            </a>
+                        </div>
+                        <div class="articles__content">
+                            <h4 class="articles__title">
+                                <a href="">Ten the best app in 2020</a>
+                            </h4>
+                            <div class="articles__cat">category</div>
+                            <div class="articles__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptas, nostrum incidunt animi, harum, adipisci soluta impedit facere distinctio nihil minus, ipsa excepturi possimus. Ut dignissimos eos numquam fugiat cupiditate!</p>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn--sm">Read more</a>
+                    </div> <!-- /.articles__item -->
+                </div> <!-- /.articles__col -->
+                <div class="articles__col">
+                    <div class="articles__item">
+                        <div class="articles__header">
+                            <time class="articles__date">10 <br>June</time>
+                            <a href="#">
+                                <img src="https://via.placeholder.com/370x257" alt="photo" class="articles__photo">
+                            </a>
+                        </div>
+                        <div class="articles__content">
+                            <h4 class="articles__title">
+                                <a href="">Ten the best app in 2020</a>
+                            </h4>
+                            <div class="articles__cat">category</div>
+                            <div class="articles__text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptas, nostrum incidunt animi, harum, adipisci soluta impedit facere distinctio nihil minus, ipsa excepturi possimus. Ut dignissimos eos numquam fugiat cupiditate!</p>
+                            </div>
+                        </div>
+                        <a href="" class="btn btn--sm">Read more</a>
+                    </div> <!-- /.articles__item -->
+                </div> <!-- /.articles__col -->
+            </div> <!-- /.articles -->
+
+            <div class="news__footer">
+                <a class="news__link" href="">See more photos</a>
+            </div>
+        </div> <!-- /.container -->
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__credits">
+                    <div class="footer__copyright">
+                        &copy; 2022 Igor Eliseev
+                    </div>
+                    <div class="footer__social">
+                        <a href="" target="_blank"><i class="fab fa-behance"></i></a>
+                        <a href="" target="_blank"><i class="fas fa-basketball-ball"></i></a>
+                        <a href="" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div> <!-- /.footer__credits -->
+                <nav class="footer__nav">
+                    <a href="" class="footer__nav-link">Work</a>
+                    <a href="" class="footer__nav-link">About me</a>
+                    <a href="" class="footer__nav-link">Blog</a>
+                    <a href="" class="footer__nav-link">Contact</a>
+                    <a href="" class="footer__nav-link footer__nav-link--btn">Hire me</a>
+                </nav>
+            </div>
+            <!--/.footer__inner -->
+        </div> <!-- /.container -->
+    </footer>
+
+
+    <!-- MODALS -->
+    <div class="modal">
+        <div class="modal__dialog">
+            <button class="modal__close fas fa-times-circle" type="button"></button>
+            <div class="modal-work">
+                <div class="modal-work__preview">
+                    <img class="modal-work__photo" src="https://via.placeholder.com/790x780" alt="">
+                </div>
+                <div class="modal-work__content">
+                    <div class="modal-work__header">
+                        <h3 class="modal-work__title">Project title</h3>
+                        <div class="modal-work__info">
+                            category <span class="modal-work__divider">|</span> 2019
+                        </div>
+                    </div> <!-- /.modal__work__header -->
+                    <div class="modal-work__client">
+                        <div class="modal-work__client-title">Client:</div>
+                        <div class="modal-work__client-company">Creative Agency</div>
+                    </div>
+                    <div class="modal-work__text">
+                        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod reprehenderit voluptate ea harum asperiores nihil doloribus ipsum dicta iste totam nulla commodi velit, sed atque molestiae in, sapiente quasi deleniti!</span></p>
+                        <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod reprehenderit voluptate ea harum asperiores nihil doloribus ipsum dicta iste totam nulla commodi velit, sed atque molestiae in, sapiente quasi deleniti!</span></p>
+                    </div>
+                    <div class="modal-work__footer">
+                        <button class="modal-work__btn modal-work__btn--prev" type="button">
+                            <i class="fas fa-chevron-left"></i>
+                            Previous
+                        </button>
+                        <button class="modal-work__btn modal-work__btn--next" type="button">
+                            Next
+                            <i class="fas fa-chevron-right"></i>
+                        </button>
+                    </div>
+                </div> <!-- /.modal-work__content -->
+            </div> <!-- /.modal-work -->
+        </div> <!-- /.modal__dialog -->
+    </div> <!-- /.modal -->
 </body>
 
 </html>
